--- a/src/components/banner/styles.css
+++ b/src/components/banner/styles.css
@@ -6,7 +6,7 @@
   background-size: contain;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: center; 
 }
 
 .banner-container .banner h2 {
@@ -25,17 +25,18 @@
   justify-content: center;
   margin-top: -50px;
   padding: 0px;
+  margin-bottom: 63px;
 }
 
 .banner-container .banners img {
-  height: 250px;
+  height: 270px;
   width: 390px;
   background-size: contain;
 } 
 
 .banner-container .banners .banner-item {
   background-color: #fff; 
-  height: 250px; 
+  height: 270px; 
   width: 390px;
   filter: drop-shadow(0px 10px 25px rgba(102, 102, 102, 0.15));
 }
