--- a/src/components/bannerProduct/styles.css
+++ b/src/components/bannerProduct/styles.css
@@ -3,7 +3,8 @@
   height: 300px;
   display: flex;
   padding-left: 30px;
-  margin-top: 90px;
+  margin-top: 90px; 
+  margin-bottom: 60px;
 }
 
 .banner-product-container .banner-product-container-text {
