--- a/src/components/footer/styles.css
+++ b/src/components/footer/styles.css
@@ -155,6 +155,7 @@
   margin-top: 60px;
   padding-top: 20px;
   border-top: solid 1px #f6f7f8;
+  cursor: pointer;
 }
 
 .footer-container .sub-rodade p {
