--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -30,4 +31,39 @@ body {
 
 .modal .container-cart .cart-products .img-product {
   opacity: 0.5;
+}
+
+input[type="checkbox"] {
+  position: relative;
+  cursor: pointer;
+  width: 20px;
+  top: -3px;
+}
+input[type="checkbox"]:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  right: 20;
+  border: 1px solid #40bfff;
+  border-radius: 4px;
+  background-color: #c0e9fd;
+}
+input[type="checkbox"]:checked:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 5px;
+  height: 10px;
+  border: solid #40bfff;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: 3px;
+  left: 8px;
 }
